planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_14_6.jsp
nb_jobs nb_machines optimal
4 4 40 0
Times
1 3 6 7
8 5 10 10
5 4 8 9
9 3 5 4
Machines
3 1 2 4
2 3 1 4
3 4 1 2
3 2 1 4
Starts
0 1 8 14 
0 8 13 23 
13 22 31 36 
1 6 23 31 